[package]
name = "quantized"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#accelerate-src = { version = "0.3.2" }
anyhow = { version = "1.0.75", features = ["backtrace"] }
tokenizers = {version = "0.14.1", default-features = false, features = [
  "onig",
  "http",
]}
candle-core = "0.3.0"
candle-transformers = "0.3.0"
candle-nn = "0.3.0"
hf-hub = "0.3.2"
clap = { version = "4.4.7", features = ["derive"] }
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.7"

[features]
#accelerate = []